--- a/Eclimo_Bike_Tracking_System/views/main.jade
+++ b/Eclimo_Bike_Tracking_System/views/main.jade
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Eclimo Bike GPS Tracking System
     link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Oswald')
@@ -62,9 +63,9 @@ html
       .device p{
       color:#777;
       }
-      @media (max-width: 991px){
+      @media (min-width:601px) and (max-width: 991px){
       #googlemap{
-      padding-bottom:35%;
+      padding-bottom:40%;
       }
       }
   body
