--- a/GPS_Location_Tracker/views/main.jade
+++ b/GPS_Location_Tracker/views/main.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title LoRa Test
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Oswald')
     //link(rel='stylesheet', href='/css/style.css')
@@ -55,9 +56,9 @@ html
       height:100%;
       overflow:auto;
       }
-      @media (max-width: 991px){
+      @media (min-width:601px) and (max-width: 991px){
       #googlemap{
-      padding-bottom:35%;
+      padding-bottom:40%;
       }
       }
   body
@@ -112,7 +113,7 @@ html
       function init_profile_info_googlemap(){
       var myLatLng = {lat: infoLat, lng: infoLng}
       var map = new google.maps.Map(document.getElementById("googlemap"), {
-      zoom: 10,
+      zoom: 17,
       center: myLatLng,
       mapTypeId:google.maps.MapTypeId.ROADMAP,
       });
@@ -170,22 +171,22 @@ html
       var logbox = $('#log .device');
       // Create a new DOM element
       var uplink = document.createElement("div")
-      var date = new Date(data.metadata.server_time)
+      var date = new Date(data.metadata.time)
       var dateString = (date.getHours()>9?date.getHours():'0'+date.getHours()) + ":" + (date.getMinutes()>9?date.getMinutes():'0'+date.getMinutes()) + ":" + (date.getSeconds()>9?date.getSeconds():'0'+date.getSeconds())
-      uplink.innerText = dateString + " - Uplink " + data.counter + " from " + data.devEUI + ": " + JSON.stringify(data.fields)
+      uplink.innerText = dateString + " - Uplink " + data.counter + " from " + data.devEUI + ": " + JSON.stringify(data.payload_fields)
       // Append to the activity feed
       //logbox.insertBefore(uplink, logbox.firstChild)
       logbox.prepend(uplink);
 
       $('#'+data.devEUI).removeClass('panel-danger').addClass('panel-primary');
       var obj='';
-      $.each(data.fields, function(key, value){
+      $.each(data.payload_fields, function(key, value){
       obj += '<p>'+key+': '+'<span>'+value+'</span></p>'
       });
       //$('#'+data.devEUI+' .uplink p').text(JSON.stringify(data.fields));
-      if(data.fields.Lat && data.fields.Lng){
+      if(data.payload_fields.Lat && data.payload_fields.Lng){
       
-      globalmarker[data.devEUI].setPosition({lat: data.fields.Lat, lng: data.fields.Lng});
+      globalmarker[data.devEUI].setPosition({lat: data.payload_fields.Lat, lng: data.payload_fields.Lng});
 
       dev = 0,
       avrglat=0,
@@ -211,12 +212,12 @@ html
       function focusCenter(){
       //console.log("Devices: "+dev);
       if(dev){globalmap.setCenter({lat:totalLat, lng: totalLng});
-      globalmap.setZoom(10);
+      globalmap.setZoom(17);
       //console.log(avrglat/dev, avrglng/dev);
       infowindow.close();
       }
       }
       $('#centermap').click(function(){focusCenter()});
       
-    script(async='', defer='', src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBqEAiL7OalS6PI2cGtXhRj58kdM3dYMHk&callback=init_profile_info_googlemap')
+    script(async='', defer='', src='https://maps.googleapis.com/maps/api/js?callback=init_profile_info_googlemap')
 
