--- a/LoRa_Demo/views/devices.jade
+++ b/LoRa_Demo/views/devices.jade
@@ -6,18 +6,12 @@ block content
         ul
          li
           a(href='/') Home
-         li
-          a(href='/statistics') Statistics
-         li
-          a(href='/devices') History
         div(style="clear:both")
         ul.collaborators
-         li.sunway
-           img(src="/img/Sunway.png")
          li.lora
-           img(src="/img/LoRa.png")
+           img(src="img/LoRa.png")
          li.cytron
-           img(src="/img/Cytron.png")
+           img(src="img/Cytron.png")
         div.title
           h1(style="margin-bottom:50px")
             b= title
