--- a/Eclimo_Bike_Tracking_System/views/main.jade
+++ b/Eclimo_Bike_Tracking_System/views/main.jade
@@ -188,5 +188,5 @@ html
       $('#dev-panel .counter span').text(data.payloads_ul.fcnt);
       })
       
-    script(async='', defer='', src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBqEAiL7OalS6PI2cGtXhRj58kdM3dYMHk&callback=init_profile_info_googlemap')
+    script(async='', defer='', src='https://maps.googleapis.com/maps/api/js?callback=init_profile_info_googlemap')
 
