--- a/LoRa_Demo/views/layout.jade
+++ b/LoRa_Demo/views/layout.jade
@@ -17,6 +17,7 @@ html(lang='en', ng-app='myApp')
      width: 100%;
      max-width: 100%;
      }
+    script(src='https://use.fontawesome.com/87979a3e18.js')
     script(src='js/angular.min.js')
     script(src='js/socket.io.js')
     script(src='js/moment.js')
