--- a/LoRa_Demo/public/css/style.css
+++ b/LoRa_Demo/public/css/style.css
@@ -5,6 +5,30 @@
 
 body {
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size:16px;
+}
+
+@media (max-width: 600px) {
+  .widget-container .inner-content{
+	  min-height:150px;
+	}
+  .widget-container .inner-cell> * {
+    display:block;
+  }
+  body,h2,h4{
+   font-size:14px;
+  }
+  h1{
+   font-size:30px;
+  }
+}
+@media (min-width: 601px) {
+	.widget-container .inner-content{
+	  min-height:100px;
+	}
+        .widget-container .inner-cell> * {
+    display:inline-block;
+  }
 }
 
 a {
@@ -14,7 +38,7 @@ a {
   text-align:center;
 }
 .title{
-  margin-bottom:80px;
+  margin-bottom:40px;
 }
 ul{
   list-style: none;
@@ -59,6 +83,10 @@ ul li a{
   text-align:left;
 }
 
+.map-container{
+  padding-bottom:10px;
+}
+
 ng-map{
   width:100%;
   height:100%;
@@ -67,6 +95,11 @@ ng-map{
 .chart-container{
   width:100%!important;
   position:relative;
+}
+
+.panel-body, .widgets-container{
+  background:#ddd;
+  text-align:center;
 }
 
 .panel.red .panel-heading{
@@ -101,6 +134,57 @@ tbody tr{
 
 .table-striped>tbody>tr:hover td {
     background-color: #d9d9d9;
+}
+
+.widgets-container{
+  width:100%;
+  text-align:center;
+  display:inline-block;
+  max-width: 600px;
+}
+
+.widget-container{
+  width:48%;
+  margin:1%;
+  float:left;
+  background:white;
+  padding:10px;
+}
+
+.widget-container .sensor-label{
+ font-weight:bold;
+}
+
+.widget-container .inner-content{
+  display:table;
+  width:100%;
+}
+
+.widget-container .inner-cell{
+  display:table-cell;
+  vertical-align:middle;
+}
+
+.widget-container .inner-cell> * {
+ vertical-align:middle;
+ margin: 2%;
+}
+
+.widget-container .fa{
+  font-size:50px;
+}
+
+.widget-container .fa-thermometer-2{
+  color:#8A2BE2
+}
+
+.widget-container .fa-map-marker{
+  color:red
+}
+
+.widget-container h1,
+.widget-container h2{
+  margin-top:10px;
 }
 
 
