--- a/LoRa_Demo/views/layout.jade
+++ b/LoRa_Demo/views/layout.jade
@@ -26,5 +26,6 @@ html(lang='en', ng-app='myApp')
     script(src="js/highcharts.src.js")
     script(src="js/highcharts-ng.min.js")
     script(src="js/ui-bootstrap-tpls.js")
+    script(src="js/cayenne.js")
     script(src='js/main.js')
   block content
