--- a/LoRa_Demo/views/index.jade
+++ b/LoRa_Demo/views/index.jade
@@ -21,7 +21,7 @@ block content
           div.col.col-lg-6.col-md-6
             div.map-container(map-lazy-load="https://maps.google.com/maps/api/js?key=AIzaSyClRlsn8Z2fW3co1eBV7b_MKuNoTBDZdpk")
               ng-map(center="4.23398,101.9722963" zoom="6" zoom-to-include-markers="auto")
-               marker(ng-if="nodes[i.id].convertedData.location.lat&&nodes[i.id].convertedData.location.lng" ng-repeat="i in identifiers" position="{{nodes[i.id].convertedData.location.lat}},{{nodes[i.id].convertedData.location.lng}}" title="hello" icon="{{markers[i.id]}}" animation="Animation.BOUNCE")
+               marker(ng-if="nodes[i.id].convertedData.GPS.lat&&nodes[i.id].convertedData.GPS.lng" ng-repeat="i in identifiers" position="{{nodes[i.id].convertedData.GPS.lat}},{{nodes[i.id].convertedData.GPS.lng}}" title="{{nodes[i.id].place}}" icon="{{markers[i.id]}}" animation="Animation.BOUNCE")
             div.widgets-container
              div.widget-container.col-33
               h1 {{identifiers.length}}
@@ -43,21 +43,16 @@ block content
                div(style="clear:both")
               div.panel-body
                div.widgets-container
-                div.widget-container.col-50
+                div.widget-container.col-50(ng-repeat="(key, val) in nodes[i.id].convertedData")
                  div.inner-content
                   div.inner-cell
-                   i.fa.fa-thermometer-2
-                   div
-                    h1 {{nodes[i.id].convertedData.temperature | number:1 }}&deg;C
-                 p.sensor-label Temperature
-                div(class='widget-container col-50' ng-show="nodes[i.id].convertedData.location.lat&&nodes[i.id].convertedData.location.lng")
-                 div.inner-content
-                  div.inner-cell
-                   i.fa.fa-map-marker
-                   div
-                    h4 {{nodes[i.id].convertedData.location.lat | GPSLatFormat}}
-                    h4 {{nodes[i.id].convertedData.location.lng | GPSLngFormat}}
-                 p.sensor-label GPS
+                   i.fa(ng-class="config[key].icon? config[key].icon:'fa-cubes'")
+                   div(ng-if="key === 'GPS'")
+                    h4 {{val.lat | GPSLatFormat}}
+                    h4 {{val.lng | GPSLngFormat}}
+                   div(ng-if="key != 'GPS' && key != 'gyro' && key != 'accelerometer'")
+                    h1 {{ config[key].pipe? applyFilter(val, config[key].pipe) : val }}
+                 p.sensor-label {{key}}
               div.panel-footer
                p Last Count: {{nodes[i.id].fcnt}}
                p Last Feed : {{nodes[i.id].ts | amUtc | amLocal | amDateFormat:'dddd, Do MMMM YYYY, h:mm:ss a'}}
